fix overflow-x

--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
-    overflow-x: hidden;
+    max-width: 100vw;
+    width: 100vw;
+    overflow-x: hidden !important;
 }
 
 .home{
@@ -50,6 +52,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow-x: hidden;
 }
 
 .boxisi{
@@ -68,7 +71,9 @@ body{
 .tombol{
     display: flex;
     width: 100%;
+    max-width: 100vw;
     justify-content: flex-start;
+    overflow-x: hidden;
 }
 .backbtn {
     appearance: none;
